Update PDF paths, enhance Wowhead scraping, and clean data
Moved novel PDF files to the PDFs/ directory and updated their references in the notebook. Improved the Wowhead Selenium scraping logic for better quest extraction, expanded expansion coverage, and added more robust error handling and reporting. Enabled PDF and Wowhead scraping by default, deleted old CSV and PNG data files, and improved PDF parsing error messages.

--- a/warcraft_lore_analysis.ipynb
+++ b/warcraft_lore_analysis.ipynb
@@ -63,12 +63,12 @@
     "    'illidan': ['https://wowpedia.fandom.com/wiki/Illidan_Stormrage'],\n",
     "    'thrall': ['https://wowpedia.fandom.com/wiki/Thrall']\n",
     "}\n",
-    "NOVELS = ['arthas_rise.pdf', 'illidan.pdf', 'lord_clans.pdf']\n",
-    "USE_PDFS = False\n",
+    "NOVELS = ['PDFs/arthas_rise.pdf', 'PDFs/illidan.pdf', 'PDFs/lord_clans.pdf']\n",
+    "USE_PDFS = True  # Set to False to skip PDF parsing\n",
     "\n",
     "# Optional: Enable Wowhead scraping (slow, may not work due to JavaScript/HTML changes)\n",
     "# Set to True only if you need comprehensive quest data and have 30+ minutes\n",
-    "USE_WOWHEAD = False\n",
+    "USE_WOWHEAD = True\n",
     "\n",
     "print(f\"✓ Configuration loaded (Keywords: {', '.join(KEYWORDS)})\")\n",
     "print(f\"  Characters: Arthas, Illidan, Thrall\")\n",
@@ -127,59 +127,114 @@
     "    from webdriver_manager.chrome import ChromeDriverManager\n",
     "    \n",
     "    def scrape_wowhead_with_selenium(chars, expansions=['wotlk']):\n",
-    "        \"\"\"Scrape Wowhead quests using Selenium (handles JavaScript rendering).\"\"\"\n",
+    "        \"\"\"\n",
+    "        Scrape Wowhead quests using Selenium (handles JavaScript rendering).\n",
+    "        Targets quests where the specified characters are quest givers.\n",
+    "        Uses CSS selectors for quest-description, quest-objectives, and div.text.\n",
+    "        \"\"\"\n",
     "        chrome_options = Options()\n",
     "        chrome_options.add_argument('--headless')\n",
     "        chrome_options.add_argument('--no-sandbox')\n",
     "        chrome_options.add_argument('--disable-dev-shm-usage')\n",
     "        chrome_options.add_argument('--log-level=3')  # Suppress logs\n",
+    "        chrome_options.add_argument('user-agent=Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36')\n",
     "        \n",
     "        driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()), options=chrome_options)\n",
     "        data = []\n",
+    "        quest_count = 0\n",
     "        \n",
     "        try:\n",
     "            for exp in expansions:\n",
     "                for char in chars:\n",
-    "                    url = f'https://www.wowhead.com/{exp}/quests?filter=cr=160;cs=1;str={char.lower()}'\n",
-    "                    print(f\"  Scraping {exp}/{char}...\")\n",
+    "                    # Search for quests related to character\n",
+    "                    url = f'https://www.wowhead.com/{exp}/quests?filter=cr=160;crs=1;crv=0;str={char.lower()}'\n",
+    "                    print(f\"  Searching {exp}/{char}...\")\n",
     "                    \n",
     "                    driver.get(url)\n",
-    "                    time.sleep(5)\n",
+    "                    time.sleep(6)  # Longer wait for JavaScript\n",
     "                    \n",
-    "                    quest_links = driver.find_elements(By.CSS_SELECTOR, 'a.q, a.q2, a.q1')\n",
+    "                    # Find quest links\n",
+    "                    quest_links = driver.find_elements(By.CSS_SELECTOR, 'a[href*=\"/quest/\"]')\n",
+    "                    quest_urls = []\n",
     "                    \n",
-    "                    for link in quest_links[:20]:\n",
+    "                    for link in quest_links[:30]:  # Increased limit\n",
     "                        try:\n",
-    "                            title = link.text\n",
-    "                            quest_url = link.get_attribute('href')\n",
-    "                            \n",
-    "                            if not quest_url or 'quest=' not in quest_url:\n",
-    "                                continue\n",
-    "                            \n",
+    "                            href = link.get_attribute('href')\n",
+    "                            if href and '/quest/' in href and href not in quest_urls:\n",
+    "                                quest_urls.append(href)\n",
+    "                        except:\n",
+    "                            continue\n",
+    "                    \n",
+    "                    print(f\"    Found {len(quest_urls)} quest links\")\n",
+    "                    \n",
+    "                    # Scrape individual quest pages\n",
+    "                    for quest_url in quest_urls:\n",
+    "                        try:\n",
     "                            driver.get(quest_url)\n",
-    "                            time.sleep(2)\n",
+    "                            time.sleep(3)  # Rate limiting + JS load time\n",
+    "                            quest_count += 1\n",
     "                            \n",
+    "                            # Extract quest title\n",
+    "                            try:\n",
+    "                                title_elem = driver.find_element(By.CSS_SELECTOR, 'h1.heading-size-1')\n",
+    "                                title = title_elem.text\n",
+    "                            except:\n",
+    "                                title = \"Unknown Quest\"\n",
+    "                            \n",
+    "                            # Check quest giver (look for character name in quest giver section)\n",
+    "                            quest_giver = \"\"\n",
+    "                            try:\n",
+    "                                # Quest giver info is typically in a specific section\n",
+    "                                giver_elems = driver.find_elements(By.CSS_SELECTOR, 'a[href*=\"/npc/\"]')\n",
+    "                                for elem in giver_elems:\n",
+    "                                    giver_text = elem.text.strip()\n",
+    "                                    if giver_text and char.lower() in giver_text.lower():\n",
+    "                                        quest_giver = giver_text\n",
+    "                                        break\n",
+    "                            except:\n",
+    "                                pass\n",
+    "                            \n",
+    "                            # Extract quest text from multiple selectors (as per Gemini suggestion)\n",
     "                            text = \"\"\n",
-    "                            for selector in ['.text', '.objective', '.q-description']:\n",
+    "                            for selector in ['div.text', '.quest-description', '.quest-objectives', \n",
+    "                                           'div[id=\"lknlksndgg-completion\"]', 'div[id=\"lknlksndgg-progress\"]']:\n",
     "                                try:\n",
-    "                                    elem = driver.find_element(By.CSS_SELECTOR, selector)\n",
-    "                                    text += elem.text + \" \"\n",
+    "                                    elems = driver.find_elements(By.CSS_SELECTOR, selector)\n",
+    "                                    for elem in elems:\n",
+    "                                        elem_text = elem.text.strip()\n",
+    "                                        if elem_text:\n",
+    "                                            text += elem_text + \" \"\n",
     "                                except:\n",
     "                                    pass\n",
     "                            \n",
-    "                            if text and any(kw.lower() in text.lower() for kw in KEYWORDS):\n",
+    "                            # Only include if contains keywords OR if quest giver matches character\n",
+    "                            has_keywords = any(kw.lower() in text.lower() for kw in KEYWORDS)\n",
+    "                            is_quest_giver = bool(quest_giver)\n",
+    "                            \n",
+    "                            if text and (has_keywords or is_quest_giver):\n",
     "                                data.append({\n",
     "                                    'char': char,\n",
     "                                    'expansion': exp,\n",
     "                                    'source': quest_url,\n",
     "                                    'title': title,\n",
+    "                                    'quest_giver': quest_giver if quest_giver else 'Unknown',\n",
     "                                    'text': text[:1500],\n",
-    "                                    'keywords': [kw for kw in KEYWORDS if kw.lower() in text.lower()]\n",
+    "                                    'keywords': [kw for kw in KEYWORDS if kw.lower() in text.lower()],\n",
+    "                                    'is_quest_giver': is_quest_giver\n",
     "                                })\n",
+    "                                marker = \"⭐\" if is_quest_giver else \"✓\"\n",
+    "                                print(f\"    {marker} {title[:50]}...\")\n",
     "                            \n",
-    "                            time.sleep(1)\n",
-    "                        except Exception:\n",
+    "                            # Responsible rate limiting (as per Gemini warning)\n",
+    "                            time.sleep(1.5)\n",
+    "                            \n",
+    "                            # Progress update every 10 quests\n",
+    "                            if quest_count % 10 == 0:\n",
+    "                                print(f\"    [{quest_count} quests checked, {len(data)} collected]\")\n",
+    "                                \n",
+    "                        except Exception as e:\n",
     "                            continue\n",
+    "                            \n",
     "        finally:\n",
     "            driver.quit()\n",
     "        \n",
@@ -253,9 +308,9 @@
     "if USE_PDFS:\n",
     "    print(\"\\nParsing PDF novels...\")\n",
     "    novel_mappings = [\n",
-    "        ('arthas_rise.pdf', 'arthas'),\n",
-    "        ('illidan.pdf', 'illidan'), \n",
-    "        ('lord_clans.pdf', 'thrall')\n",
+    "        (NOVELS[0], 'arthas'),   # PDFs/arthas_rise.pdf\n",
+    "        (NOVELS[1], 'illidan'),  # PDFs/illidan.pdf\n",
+    "        (NOVELS[2], 'thrall')    # PDFs/lord_clans.pdf\n",
     "    ]\n",
     "    \n",
     "    for novel, char in novel_mappings:\n",
@@ -265,6 +320,8 @@
     "            print(f\"  ✓ {char.capitalize()}: {len(novel_data)} passages from {novel}\")\n",
     "        except FileNotFoundError:\n",
     "            print(f\"  ⚠ {novel} not found (skipping)\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"  ✗ Error parsing {novel}: {e}\")\n",
     "else:\n",
     "    print(\"\\n  PDF parsing disabled (set USE_PDFS=True to enable)\")\n",
     "\n",
@@ -294,18 +351,33 @@
     "\n",
     "if USE_WOWHEAD and SELENIUM_AVAILABLE:\n",
     "    print(\"\\nSelenium enabled - scraping Wowhead quest database...\")\n",
-    "    print(\"⏱️ This may take 10-30 minutes (JavaScript rendering + rate limiting)\\n\")\n",
+    "    print(\"⏱️ This may take 30-60 minutes (JavaScript rendering + rate limiting)\")\n",
+    "    print(\"  Searching expansions: Classic → Legion\\n\")\n",
     "    \n",
     "    try:\n",
-    "        selenium_quests = scrape_wowhead_with_selenium(['Thrall', 'Arthas'], expansions=['wotlk'])\n",
+    "        selenium_quests = scrape_wowhead_with_selenium(\n",
+    "            ['Thrall', 'Arthas'], \n",
+    "            expansions=['classic', 'tbc', 'wotlk', 'cataclysm', 'mop', 'wod', 'legion']\n",
+    "        )\n",
     "        \n",
     "        if len(selenium_quests) > 0:\n",
     "            selenium_quests['count'] = selenium_quests['keywords'].apply(len)\n",
     "            selenium_quests.to_csv('wowhead_quests_selenium.csv', index=False)\n",
     "            \n",
     "            print(f\"\\n✓ Wowhead collection complete: {len(selenium_quests)} quests\")\n",
+    "            \n",
+    "            # Show quest giver statistics\n",
+    "            quest_giver_count = len(selenium_quests[selenium_quests['is_quest_giver'] == True])\n",
+    "            print(f\"  ⭐ {quest_giver_count} quests with character as quest giver\")\n",
+    "            print(f\"  ✓ {len(selenium_quests) - quest_giver_count} quests mentioning character\")\n",
+    "            \n",
     "            print(\"\\nKeyword distribution by character/expansion:\")\n",
     "            print(selenium_quests.groupby(['char', 'expansion'])['count'].sum())\n",
+    "            \n",
+    "            if quest_giver_count > 0:\n",
+    "                print(\"\\nQuests given by target characters:\")\n",
+    "                for _, quest in selenium_quests[selenium_quests['is_quest_giver'] == True].iterrows():\n",
+    "                    print(f\"  • {quest['title']} ({quest['quest_giver']}) - {quest['expansion']}\")\n",
     "        else:\n",
     "            print(\"\\n⚠ No quests collected from Wowhead\")\n",
     "            print(\"  Possible causes: JavaScript timeout, changed HTML structure, or no keyword matches\")\n",
